recursion.logo.tree.Tree.scala.error
Compilation error:
Tree:5: error: type mismatch;
 found   : Unit
 required: java.awt.Color
    setColor(current(steps))
                    ^Tree:8: error: not found: value len
    tree(steps-1,len*shrink,angle,shrink)
                 ^